# abstract_collection

./: CMakeLists.txt  README.md  main.cpp
include/unix/: srlz.cpp  srlz.h  termlib.cpp  termlib.h
include/win32/: srlz.cpp  srlz.h  termlib.cpp  termlib.h
